language/move-lang/tests/move_check/liveness/move_in_infinite_loop_branched.exp
error: 

   ┌── tests/move_check/liveness/move_in_infinite_loop_branched.move:5:28 ───
   │
 5 │             loop { let y = move x; y / y; }
   │                            ^^^^^^ Invalid usage of local 'x'
   ·
 5 │             loop { let y = move x; y / y; }
   │                            ------ The local might not have a value due to this position. The local must be assigned a value before being used
   │

error: 

   ┌── tests/move_check/liveness/move_in_infinite_loop_branched.move:7:28 ───
   │
 7 │             loop { let y = move x; y % y; }
   │                            ^^^^^^ Invalid usage of local 'x'
   ·
 7 │             loop { let y = move x; y % y; }
   │                            ------ The local might not have a value due to this position. The local must be assigned a value before being used
   │

